# litestar_saq_htmx

./: .gitignore  README.md  package-lock.json  pyproject.toml  tailwind.config.js
examples/: client.py  server.py
litestar_saq_htmx/: config.py  controller.py  plugin.py
litestar_saq_htmx/saq_static/: saq_htmx.css
litestar_saq_htmx/saq_templates/: index.html  job_detail.html  jobs.html  queue_info.html  workers.html
tests/: conftest.py  test_saq_htmx.py
